# artifacts/api-server/src/routes/index.ts
@@ -5,6 +5,7 @@ import financesRouter from "./finances";
 import inventoryRouter from "./inventory";
 import activitiesRouter from "./activities";
 import dashboardRouter from "./dashboard";
+import campaignsRouter from "./campaigns";
 
 const router: IRouter = Router();
 
@@ -14,5 +15,7 @@ router.use("/finances", financesRouter);
 router.use("/inventory", inventoryRouter);
 router.use("/activities", activitiesRouter);
 router.use("/dashboard", dashboardRouter);
+router.use("/campaigns", campaignsRouter);
+router.use("/contributions", campaignsRouter);
 
 export default router;
